Fix: color palette color selection not visible on screens greater than 1800px

--- a/inc/customizer/custom-controls/assets/css/unminified/color-rtl.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/color-rtl.css
@@ -398,6 +398,12 @@
 	top: 0px;
 	width: 20px;
 }
+.ast-color-palette .components-circular-option-picker__option.is-pressed + svg {
+	right: 3px;
+	top: 0;
+	mix-blend-mode: difference;
+}
+
 .customize-control-ast-color + .customize-control-ast-color {
     margin-top: 30px;
 }
@@ -412,9 +418,6 @@
     }
     .ast-color-palette .components-circular-option-picker__option.is-pressed + svg {
         width: 18px;
-        right: 3px;
-        top: 0;
-		mix-blend-mode: difference;
     }
     .ast-color-palette .components-circular-option-picker__option-wrapper .components-circular-option-picker__option:focus::after {
         width: 24px;
